feat: Add task update features
